--- a/src/Components/Navbars/Navbar.css
+++ b/src/Components/Navbars/Navbar.css
@@ -7,7 +7,7 @@ nav {
     box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.1);
     padding: 0 10%;
     font-family: "Teko", sans-serif;
-    background: rgb(246, 181, 230);
+    background: #53A57F;
   }
   
   .logo-container {
@@ -20,12 +20,12 @@ nav {
     text-decoration: none;
     margin-left: 15px;
     font-size: 20px;
-    color: #1e90c2;
+    color: #ffffff;
     transition: color ease-in-out 300ms;
   }
   
   .link:hover {
-    color: #1b4388;
+    color: #000000;
   }
   
   .active-link {
